--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -202,11 +202,28 @@
                         </androidx.cardview.widget.CardView>
                     </LinearLayout>
                 </HorizontalScrollView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Explore"
+                    android:layout_marginHorizontal="24dp"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="#000"
+                    android:fontFamily="serif-monospace"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="8dp" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvFurnitureList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+
+
+
 
             </LinearLayout>
         </ScrollView>
-
-
 
     </RelativeLayout>
 
