--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="360dp">
                 <ImageView
@@ -19,8 +19,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/bed_example"
-                    android:scaleType="centerCrop" />
-            </RelativeLayout>
+                    android:scaleType="centerInside"
+                    android:layout_gravity="center"
+                     />
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,18 +41,15 @@
                             android:id="@+id/tv_name_detailsPage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="IDANAS"
                             android:textColor="@color/black"
-                            android:fontFamily="@font/CascadiaCode"
                             android:textSize="24sp"/>
                         <TextView
                             android:id="@+id/tv_category_detailsPage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Chair"
                             android:textSize="16dp"
                             android:textStyle="bold"
-                            android:fontFamily="@font/CascadiaCode"/>
+                           />
                     </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
@@ -81,9 +80,7 @@
                 android:id="@+id/tv_description_detailsPage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="dafadfdafdfjdhfgdsaf jdh dgaf duygf h agdg gfyu dgf gdhgf jhg udgf dh fuydga dgf udgf djgfaud gfd gjfgd gfg"
                 android:padding="16dp"
-                android:fontFamily="@font/CascadiaCode"
                 android:textColor="#444444"
                 android:textSize="16sp"/>
             <Button
@@ -94,7 +91,7 @@
                 android:backgroundTint="@color/Primary_Dark_600"
                 android:textSize="16sp"
                 android:text="Try in ar"
-                android:fontFamily="@font/CascadiaCode"/>
+                />
 
 
         </LinearLayout>
