--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".DetailsActivity">
     <ScrollView
         android:layout_width="match_parent"
@@ -13,22 +14,38 @@
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="360dp">
-                <ImageView
-                    android:id="@+id/iv_detailsPage"
+                android:layout_height="364dp">
+<!--                <ImageView-->
+<!--                    android:id="@+id/iv_detailsPage"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:src="@drawable/bed_example"-->
+<!--                    android:scaleType="centerInside"-->
+<!--                    android:layout_gravity="center"-->
+<!--                     />-->
+                <com.denzcoskun.imageslider.ImageSlider
+                    android:id="@+id/image_slider"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/bed_example"
-                    android:scaleType="centerInside"
-                    android:layout_gravity="center"
-                     />
+                    app:iss_auto_cycle="true"
+                    app:iss_period="2500"
+                    app:iss_delay="0"
+                    />
+
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@color/Secondary_blue_200" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="100"
                 android:padding="16dp">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -87,8 +104,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_marginVertical="8dp"
                 android:layout_marginHorizontal="60dp"
-                android:backgroundTint="@color/Primary_Dark_600"
+                android:backgroundTint="@color/Secondary_blue_300"
                 android:textSize="16sp"
                 android:text="Try in ar"
                 />
