--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -74,17 +74,17 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="50">
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="120dp"
-                        android:gravity="right"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
                         <com.airbnb.lottie.LottieAnimationView
                             android:id="@+id/lottieFavorite"
-                            android:layout_width="60dp"
-                            android:layout_height="60dp"
-                            app:lottie_rawRes="@raw/favorite"/>
+                            android:layout_width="80dp"
+                            android:layout_height="56dp"
+                            android:layout_gravity="end"
+                            android:scaleType="centerCrop"
+                            app:lottie_rawRes="@raw/favorite" />
 
 
                     </LinearLayout>
