--- a/app/src/main/res/layout/furniture_card_layout.xml
+++ b/app/src/main/res/layout/furniture_card_layout.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="12sp"
+            android:fontFamily="@font/montserrat"
             android:gravity="center_horizontal"
             />
 
