--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,10 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/background_color"
     tools:context=".DetailsActivity">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,64 +45,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="100"
-                android:padding="16dp">
-
+                android:layout_marginVertical="14dp">
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="50">
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    android:padding="8dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/tv_name_detailsPage"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <TextView
-                            android:id="@+id/tv_name_detailsPage"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="4dp"
-                            android:textColor="@color/black"
-                            android:textSize="24sp"
-                            android:text="IDANAS"
-                            android:fontFamily="@font/montserrat"
-                            />
-                        <TextView
-                            android:id="@+id/tv_category_detailsPage"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="16dp"
-                            android:text="Chair"
-                            android:fontFamily="@font/montserrat"
-                           />
-                    </LinearLayout>
+                        android:fontFamily="serif-monospace"
+                        android:textStyle="bold"
+                        android:text="IDANAS"
+                        android:textColor="@color/black"
+                        android:textSize="24sp" />
+
+                    <TextView
+                        android:id="@+id/tv_category_detailsPage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:textSize="16dp"
+                        android:text="Chair"
+                        android:textStyle="bold"
+                        android:fontFamily="serif-monospace"
+                        />
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="50">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/lottieFavorite"
+                    android:layout_width="80dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="200dp"
+                    android:scaleType="centerCrop"
+                    app:lottie_rawRes="@raw/tint" />
 
-                        <com.airbnb.lottie.LottieAnimationView
-                            android:id="@+id/lottieFavorite"
-                            android:layout_width="80dp"
-                            android:layout_height="56dp"
-                            android:layout_gravity="end"
-                            android:scaleType="centerCrop"
-                            app:lottie_rawRes="@raw/favorite" />
-
-
-                    </LinearLayout>
-                </LinearLayout>
             </LinearLayout>
             <View
                 android:layout_width="250dp"
                 android:layout_height="1dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="16dp"
                 android:background="#DDDDDD"/>
             <TextView
                 android:id="@+id/tv_description_detailsPage"
@@ -111,7 +96,7 @@
                 android:textAlignment="center"
                 android:textColor="#444444"
                 android:textSize="16sp"
-                android:fontFamily="@font/montserrat"/>
+                android:fontFamily="serif-monospace"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
