--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/background_color">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -72,8 +73,9 @@
                     android:text="Categories"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="4dp"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/cascadiacode"
+                    android:textSize="16sp"
+                    android:fontFamily="serif-monospace"
+                    android:textColor="#000"
                     android:layout_marginHorizontal="14dp"
                     android:padding="8dp"/>
                 <HorizontalScrollView
@@ -112,7 +114,7 @@
                                     android:text="BEDS"
                                     android:layout_gravity="center_horizontal"
                                     android:textStyle="bold"
-                                    android:fontFamily="@font/montserrat"
+                                    android:fontFamily="serif-monospace"
                                     android:textSize="14sp"/>
 
                             </LinearLayout>
@@ -142,7 +144,7 @@
                                     android:text="SOFAS"
                                     android:layout_gravity="center_horizontal"
                                     android:textStyle="bold"
-                                    android:fontFamily="@font/montserrat"
+                                    android:fontFamily="serif-monospace"
                                     android:textSize="14sp"/>
 
                             </LinearLayout>
@@ -172,7 +174,7 @@
                                     android:text="CHAIRS"
                                     android:layout_gravity="center_horizontal"
                                     android:textStyle="bold"
-                                    android:fontFamily="@font/montserrat"
+                                    android:fontFamily="serif-monospace"
                                     android:textSize="14sp"/>
 
                             </LinearLayout>
@@ -202,7 +204,7 @@
                                     android:text="TABLES"
                                     android:layout_gravity="center_horizontal"
                                     android:textStyle="bold"
-                                    android:fontFamily="@font/montserrat"
+                                    android:fontFamily="serif-monospace"
                                     android:textSize="14sp"/>
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
@@ -213,8 +215,9 @@
                     android:layout_height="wrap_content"
                     android:text="Explore"
                     android:layout_marginHorizontal="24dp"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/cascadiacode"
+                    android:textSize="16sp"
+                    android:textColor="#000"
+                    android:fontFamily="serif-monospace"
                     android:layout_marginBottom="16dp"
                     android:layout_marginTop="8dp" />
                 <androidx.recyclerview.widget.RecyclerView
