--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -77,7 +77,7 @@
                     android:layout_height="50dp"
                     android:layout_marginStart="200dp"
                     android:scaleType="centerCrop"
-                    app:lottie_rawRes="@raw/tint" />
+                    app:lottie_rawRes="@raw/favorite" />
 
             </LinearLayout>
             <View
