--- a/app/src/main/res/layout/furniture_card_layout.xml
+++ b/app/src/main/res/layout/furniture_card_layout.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginLeft="12dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginRight="12dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true"
