--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -55,7 +55,7 @@
                     android:orientation="vertical">
                     <TextView
                         android:id="@+id/tv_name_detailsPage"
-                        android:layout_width="wrap_content"
+                        android:layout_width="160dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="serif-monospace"
                         android:textStyle="bold"
@@ -67,19 +67,27 @@
                         android:id="@+id/tv_category_detailsPage"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:textSize="16dp"
+                        android:textSize="16sp"
                         android:text="Chair"
                         android:textStyle="bold"
                         android:fontFamily="serif-monospace"
                         />
                 </LinearLayout>
-                <com.airbnb.lottie.LottieAnimationView
-                    android:id="@+id/lottieFavorite"
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="200dp"
-                    android:scaleType="centerCrop"
-                    app:lottie_rawRes="@raw/favorite" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                   android:layout_marginStart="150dp">
+
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/lottieFavorite"
+                        android:layout_width="80dp"
+                        android:layout_height="50dp"
+                        android:scaleType="centerCrop"
+                        app:lottie_rawRes="@raw/favorite" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
             <View
