--- a/app/src/main/res/layout/furniture_card_layout.xml
+++ b/app/src/main/res/layout/furniture_card_layout.xml
@@ -6,10 +6,13 @@
     android:layout_marginLeft="12dp"
     android:layout_marginBottom="8dp"
     android:layout_marginRight="12dp"
+    android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true"
-    app:contentPadding="8dp">
+    app:contentPadding="8dp"
+    android:focusable="true">
+
     <LinearLayout
         android:layout_width="160dp"
         android:layout_height="wrap_content"
