--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -108,6 +108,7 @@
                 android:textSize="16sp"
                 android:fontFamily="serif-monospace"/>
             <Button
+                android:id="@+id/btn_OpenUnity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
