--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/Primary_Dark_600"
+        android:background="@color/Primary_color"
         android:paddingTop="50dp"
         app:elevation="8dp">
         <LinearLayout
@@ -39,18 +39,15 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginBottom="16dp"
                 android:orientation="horizontal">
-                <EditText
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/text_input_area"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/white_rounded_shape"
-                    android:drawableStart="@drawable/ic_search_light_gray_24dp"
-                    android:drawablePadding="8dp"
-                    android:hint="What are you looking for ?"
-                    android:padding="16dp"
-                    android:fontFamily="@font/montserrat"
-                    android:textColor="@color/black"
-                    android:textColorHint="#aeaeae"
-                    android:textSize="14sp"/>
+                    app:searchIcon="@drawable/search_icon"
+                    app:queryHint="What are you looking for ?"
+                    app:iconifiedByDefault="false"
+                   />
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
@@ -68,17 +65,19 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/category_heading_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Categories"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="4dp"
                     android:textSize="16sp"
-                    android:fontFamily="serif-monospace"
-                    android:textColor="#000"
+                    android:fontFamily="@font/sourceserifpro"
+                    android:textColor="@color/text_color"
                     android:layout_marginHorizontal="14dp"
                     android:padding="8dp"/>
                 <HorizontalScrollView
+                    android:id = "@+id/horizontalScrollView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
@@ -95,9 +94,10 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:foreground="?attr/selectableItemBackground"
+                            android:backgroundTint="@color/accent_color"
                             android:focusable="true"
                             app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp"
+                            app:cardElevation="0.5dp"
                             app:cardUseCompatPadding="true"
                             app:contentPadding="12dp">
                             <LinearLayout
@@ -109,14 +109,14 @@
                                     android:layout_width="80dp"
                                     android:layout_height="80dp"
                                     android:layout_marginHorizontal="20dp"
-                                    android:src="@drawable/bed" />
+                                    android:src="@drawable/bed_1" />
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="BEDS"
+                                    android:text="Beds"
                                     android:layout_gravity="center_horizontal"
-                                    android:textStyle="bold"
-                                    android:fontFamily="serif-monospace"
+                                    android:textStyle="normal"
+                                    android:fontFamily="@font/sourceserifpro"
                                     android:textSize="14sp"/>
 
                             </LinearLayout>
@@ -127,9 +127,10 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:foreground="?attr/selectableItemBackground"
+                            android:backgroundTint="@color/accent_color"
                             android:focusable="true"
                             app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp"
+                            app:cardElevation="0.5dp"
                             app:cardUseCompatPadding="true"
                             app:contentPadding="12dp">
                             <LinearLayout
@@ -141,14 +142,14 @@
                                     android:layout_width="80dp"
                                     android:layout_height="80dp"
                                     android:layout_marginHorizontal="20dp"
-                                    android:src="@drawable/sofa" />
+                                    android:src="@drawable/sofa_1" />
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="SOFAS"
+                                    android:text="Sofas"
                                     android:layout_gravity="center_horizontal"
-                                    android:textStyle="bold"
-                                    android:fontFamily="serif-monospace"
+                                    android:textStyle="normal"
+                                    android:fontFamily="@font/sourceserifpro"
                                     android:textSize="14sp"/>
 
                             </LinearLayout>
@@ -159,9 +160,10 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:foreground="?attr/selectableItemBackground"
+                            android:backgroundTint="@color/accent_color"
                             android:focusable="true"
                             app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp"
+                            app:cardElevation="0.5dp"
                             app:cardUseCompatPadding="true"
                             app:contentPadding="12dp">
                             <LinearLayout
@@ -173,14 +175,14 @@
                                     android:layout_width="80dp"
                                     android:layout_height="80dp"
                                     android:layout_marginHorizontal="20dp"
-                                    android:src="@drawable/chair" />
+                                    android:src="@drawable/chair_1" />
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="CHAIRS"
+                                    android:text="Chairs"
                                     android:layout_gravity="center_horizontal"
-                                    android:textStyle="bold"
-                                    android:fontFamily="serif-monospace"
+                                    android:textStyle="normal"
+                                    android:fontFamily="@font/sourceserifpro"
                                     android:textSize="14sp"/>
 
                             </LinearLayout>
@@ -191,9 +193,10 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:foreground="?attr/selectableItemBackground"
+                            android:backgroundTint="@color/accent_color"
                             android:focusable="true"
                             app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp"
+                            app:cardElevation="0.5dp"
                             app:cardUseCompatPadding="true"
                             app:contentPadding="12dp">
                             <LinearLayout
@@ -205,14 +208,14 @@
                                     android:layout_width="80dp"
                                     android:layout_height="80dp"
                                     android:layout_marginHorizontal="20dp"
-                                    android:src="@drawable/desk" />
+                                    android:src="@drawable/table_1" />
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="TABLES"
+                                    android:text="Tables"
                                     android:layout_gravity="center_horizontal"
-                                    android:textStyle="bold"
-                                    android:fontFamily="serif-monospace"
+                                    android:textStyle="normal"
+                                    android:fontFamily="@font/sourceserifpro"
                                     android:textSize="14sp"/>
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
@@ -224,8 +227,8 @@
                     android:text="Explore"
                     android:layout_marginHorizontal="24dp"
                     android:textSize="16sp"
-                    android:textColor="#000"
-                    android:fontFamily="serif-monospace"
+                    android:textColor="@color/text_color"
+                    android:fontFamily="@font/sourceserifpro"
                     android:layout_marginBottom="16dp"
                     android:layout_marginTop="8dp" />
                 <androidx.recyclerview.widget.RecyclerView
@@ -239,7 +242,6 @@
 
             </LinearLayout>
         </ScrollView>
-
     </RelativeLayout>
 
 
