--- a/app/src/main/res/layout/furniture_card_layout.xml
+++ b/app/src/main/res/layout/furniture_card_layout.xml
@@ -7,10 +7,11 @@
     android:layout_marginBottom="8dp"
     android:layout_marginRight="12dp"
     android:foreground="?attr/selectableItemBackground"
+    android:backgroundTint="@color/accent_color"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
+    app:cardElevation="0.5dp"
     app:cardUseCompatPadding="true"
-    app:contentPadding="8dp"
+    app:contentPadding="4dp"
     android:focusable="true">
 
     <LinearLayout
@@ -23,7 +24,6 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginHorizontal="5dp"
-            android:layout_marginBottom="4dp"
             />
 
         <TextView
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="12sp"
-            android:fontFamily="@font/montserrat"
+            android:fontFamily="@font/sourceserifpro"
             android:gravity="center_horizontal"
             />
 
