--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -59,7 +59,6 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="serif-monospace"
                         android:textStyle="bold"
-                        android:text="IDANAS"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
 
@@ -68,7 +67,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:textSize="16sp"
-                        android:text="Chair"
                         android:textStyle="bold"
                         android:fontFamily="serif-monospace"
                         />
@@ -102,11 +100,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
-                android:text="Hey This is dummy text for testing"
                 android:textAlignment="center"
                 android:textColor="#444444"
-                android:textSize="16sp"
-                android:fontFamily="serif-monospace"/>
+                android:textSize="14sp"
+                android:fontFamily="@font/sourceserifpro"/>
             <Button
                 android:id="@+id/btn_OpenUnity"
                 android:layout_width="match_parent"
@@ -117,7 +114,7 @@
                 android:backgroundTint="@color/Secondary_blue_300"
                 android:textSize="16sp"
                 android:text="Try in ar"
-                android:fontFamily="@font/montserrat"
+                android:fontFamily="@font/sourceserifpro"
                 android:textStyle="bold"
 
                 />
