--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -16,8 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:text="AR Furniture"
-        android:textColor="@color/black"
-        android:fontFamily="serif-monospace"
+        android:fontFamily="@font/abrilfatface"
         android:textSize="25sp"
         android:textStyle="bold" />
 
