--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#808080</color>
     <color name="red">#E31414</color>
-    <color name="Primary_Dark_800">#0A2647</color>
+    <color name="Primary_color">#4056A1</color>
     <color name="Primary_Dark_600">#144272</color>
     <color name="Secondary_blue_300">#205295</color>
     <color name="Secondary_blue_200">#2C74B3</color>
-    <color name="background_color">#FEFBF3</color>
+    <color name="background_color">#F0F9F4</color>
+    <color name="accent_color">#EBF1F4</color>
+    <color name="text_color">#465C8C</color>
 </resources>
