--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -222,6 +222,7 @@
                     </LinearLayout>
                 </HorizontalScrollView>
                 <TextView
+                    android:id="@+id/exploreHeadingTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Explore"
